--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1618,39 +1618,37 @@ select:focus {
 	font-weight: normal;
 }
 
-.vip_order_goods h3 a {
+.vip_order_goods h3 {
 	float: left;
 	overflow: hidden;
 	width: 100%;
 }
 
-.vip_order_goods h3 a i {
+.vip_order_goods h3 i {
 	float: left;
 	width: 25%;
-	height: 1.2rem;
 }
 
-.vip_order_goods h3 a i img {
+.vip_order_goods h3 i img {
 	display: block;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 }
 
-.vip_order_goods h3 a dl {
+.vip_order_goods h3 dl {
 	float: right;
 	/* float: left; */
 	margin-left: 2.5%;
 	width: 70%;
-	height: 1.2rem;
 	position: relative;
 }
 
-.vip_order_goods h3 a dt {
+.vip_order_goods h3 dt {
 	font-size: .24rem;
 	color: #666;
 	line-height: .36rem;
-	height: .72rem;
+	height: .42rem;
 	overflow: hidden;
 
 	text-overflow: -o-ellipsis-lastline;
@@ -1661,14 +1659,12 @@ select:focus {
 	-webkit-box-orient: vertical;
 }
 
-.vip_order_goods h3 a dd {
-	position: absolute;
-	bottom: .1rem;
+.vip_order_goods h3 dd {
 	font-size: .22rem;
 	color: #999;
 }
 
-.vip_order_goods h3 a dd em {
+.vip_order_goods h3 dd em {
 	font-style: normal;
 	margin-right: .5em;
 }
